# fft-water

./: .gitignore  CMakeLists.txt  README.md
header/: common.h  fft.h  ocean.h  skybox.h
shader/: fsOcean.glsl  tesQuad.glsl
src/: common.cpp  fft.cpp  main.cpp  ocean.cpp  screenQuad.cpp  skybox.cpp
